Fix för vertical alignment i table-komponenten.

--- a/projects/komponentkartan/src/assets/partials/_components.table.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.table.scss
@@ -42,9 +42,9 @@
   box-shadow: inset 0px 0px 0px $focus-outline-width $focus-color;
 }
 
-.table-header .table__column {
+/*.table-header .table__column {
   vertical-align: bottom;
-}
+}*/
 
 .table__column {
   vertical-align:  top;
